fix gap checkout

--- a/src/partials/_checkout.sass
+++ b/src/partials/_checkout.sass
@@ -82,7 +82,7 @@
 				display: flex
 				align-items: center
 				justify-content: space-between
-				margin-top: 15px
+				margin-top: 0
 				padding-bottom: 15px
 			&:first-child
 				margin-top: 0
@@ -140,10 +140,10 @@
 				margin-left: auto
 				border-radius: 100px
 				gap: 5px
-				background: $cehckoutBG
+				background: rgba($cehckoutBG, 0.8)
 				padding: 5px
 				+sm
-					width: 120px
+					width: 124px
 					align-self: center
 
 				.tito-quantity-input
@@ -157,6 +157,7 @@
 					border: none
 					+sm 
 						height: 34px
+						width: 34px
 					
 					&::placeholder
 						color: $cehckoutColor
@@ -177,7 +178,7 @@
 						+sm 
 							height: 34px
 							width: 34px
-							border-radius: 5px
+							
 						svg
 							display: none
 						&:after, &:before
